fixed css styling on past years spacer. Padding was making the links misaligned

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -741,7 +741,7 @@ figure {
 
 	a {
 		color: $brand-reverse-link;
-		padding-right: 10px;
+		//padding-right: 10px;
 		&:hover {
 			color: $brand-reverse-link-hover;
 			text-decoration: none;
